# merchant-ai

./: .gitignore  README.md  design-qa.md  docker-compose-doris.yaml  docker-compose.elasticsearch.yml
python_backend/: Dockerfile.worker  README.md  __init__.py  langgraph.json  pyproject.toml
python_backend/app/: __init__.py  main.py
python_backend/merchant_ai/: __init__.py  config.py  models.py  runtime_compat.py  worker.py
python_backend/merchant_ai/graph/: action_contract.py  evidence_verification_contract.py  message_history.py  policy.py  query_graph_contract.py  state.py  workflow.py
python_backend/merchant_ai/policies/: authorization_policy.json  language_policy.json
python_backend/merchant_ai/services/: __init__.py  access_control.py  analysis_worker.py  answer.py  answer_claims.py  answer_formatting.py  artifacts.py  assets.py  attachments.py  authorization_policy.py  cache.py  capabilities.py  checkpoints.py  clarification.py  context.py  context_assembly.py  context_filesystem.py  controlled_react.py  data_snapshot_contract.py  deep_agent_runtime.py  distributed_workers.py  doris_physical_plan_governance.py  entity_contracts.py  evaluation.py  evidence.py  formulas.py  goal_recall_coverage.py  governed_query_service.py  grounded_analysis_artifact.py  grounded_answer_coverage.py  grounded_context_compaction.py  grounded_context_workspace.py  grounded_contract_repair.py  grounded_conversation_online_authority.py  grounded_conversation_semantic_provider.py  grounded_conversation_semantic_resolver.py  grounded_conversation_state.py  grounded_deep_agent_runtime.py  grounded_execution_graph.py  grounded_execution_identity.py  (+69 more)
python_backend/resources/evaluation/: golden_cases.jsonl  real_smoke_cases_5.json  user_real_cases_8.json
python_backend/resources/runtime/: capabilities.json  goal_recall_capabilities.json
python_backend/resources/schema/: ads_merchant_profile.sql  dim_merchant_df.sql  dwd_merchant_appeal_detail_df.sql  dwd_merchant_deposit_recharge_df.sql  dwm_coupon_detail_di.sql  dwm_cs_repay_detail_df.sql  dwm_cs_ticket_detail_di.sql  dwm_goods_detail_df.sql  dwm_scm_detail_di.sql  dwm_trade_order_detail_di.sql  dwm_trade_refund_detail_di.sql
python_backend/resources/sql/: doris_inverted_indexes_optional.sql  merchant_ai_answer.sql  merchant_ai_answer_doris.sql  merchant_memory_event.sql  merchant_memory_fact.sql  merchant_recent_focus.sql
python_backend/scripts/: acceptance_runner.py
python_backend/tests/: conftest.py  test_engineering_hardening.py  test_harness.py  test_seed_data_consistency.py  test_smoke.py
python_backend/tests/api/: test_merchant_identity_auth.py  test_smoke.py
python_backend/tests/architecture/: test_no_business_hardcoding_contract.py  test_no_regex_contract.py
python_backend/tests/harness/: test_confirmation_semantic_staleness.py  test_distributed_workers.py  test_harness.py  test_query_graph_validation_state.py  test_state_machine_contract.py  (+1 more)
(+515 files in other folders)
