[project]
name = "yshopping-merchant-ai-python"
version = "0.1.0"
description = "Python FastAPI + LangGraph implementation of the yshopping Merchant AI backend."
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  # Deep Agents 0.6.12 is the Diana-style outer harness.  Keep this
  # compatibility set together; mixing it with the old LangChain 0.3
  # environment produces import-time and checkpoint protocol failures.
  "deepagents==0.6.12",
  "langchain==1.3.12",
  "langchain-core==1.4.9",
  "langchain-text-splitters==1.1.2",
  "langchain-openai==1.3.5",
  "langgraph==1.2.9",
  "langgraph-checkpoint-sqlite==3.1.0",
  "langgraph-checkpoint-postgres==3.1.0",
  "psycopg[binary]>=3.2.0",
  "pymysql>=1.1.0",
  "redis>=5.0.0",
  "requests>=2.32.0",
  "sqlglot>=25.0.0",
  "openpyxl>=3.1,<4",
  "xlrd>=2,<3",
  "pypdf>=5,<6",
  "Pillow>=10,<12",
  "rapidocr-onnxruntime>=1.4,<2",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]
distributed = [
  "boto3>=1.35,<2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*", "merchant_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not slow'"
markers = [
  "integration: requires real LLM and Doris connectivity",
  "slow: long-running regression or harness tests",
]
